--- a/04-HTML-CSS/final/style.css
+++ b/04-HTML-CSS/final/style.css
@@ -47,9 +47,9 @@ a {
   background-color: yellowgreen;
 }
 
-#course-image {
+/* #course-image {
   width: 300px;
-}
+} */
 
 #your-name h2 {
   color: olivedrab;
